--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Taniya Patel's Stories</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>Meet Me!<br />
+						Taniya Patel</h1>
+						<p>A free, fully responsible for all the mishaps and chaos in my life. I logged in here but I am not a bird and so I tweet at <a href="https://twitter.com/TrushaP2198">@TrushaP2198 rarely.</a>
+							<br /> Peep in here to see my self-learned and only appreciated photography skills. This is something the world calls Instagram <a href="https://www.instagram.com/trusha418/">trusha418.</a><br />
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -54,12 +54,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">April 27, 2021</span>
+									<h2><a href="#">Stories, Lessons, Mistakes.<br />
+									A blog to reflect me</a></h2>
+									<p>This is my first and the only attempt to dive in a blogging industry.<br />
+									Humility, descrition, and light- hearted mockery of my work is appreciated.<br />
+								I hope that with time, I change, just like the salty waters in the ocean, and evaporate to make a perfection of myself.
+							<br /> But then, Since when did the Universe ask for perfection?</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
