--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div id="intro">
 						<h1>Meet Me!<br />
 						Taniya Patel</h1>
-						<p>A free, fully responsible for all the mishaps and chaos in my life. I logged in here but I am not a bird and so I tweet at <a href="https://twitter.com/TrushaP2198">@TrushaP2198 rarely.</a>
-							<br /> Peep in here to see my self-learned and only appreciated photography skills. This is something the world calls Instagram <a href="https://www.instagram.com/trusha418/">trusha418.</a><br />
+						<p>A free soul, but fully responsible for all the mishaps and chaos in my life. I logged in here to vent and sing, but I am not a bird and so I tweet rarely at <a href="https://twitter.com/TrushaP2198">@TrushaP2198.</a>
+							<br /> Peep in here to see my self-learned and only appreciated photography skills. This is a place in itself that the world calls Instagram <a href="https://www.instagram.com/trusha418/">trusha418.</a><br />
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
