--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Home Sweet Home</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li class="active"><a href="index.html">Back to Home</a></li>
+							<li><a href="generic.html">Blog Pages</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -72,14 +72,15 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">April 27, 2021</span>
+										<h2><a href="posts/cherish.html">A bond to Cherish<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/woman.jpg" alt="" /></a>
+									<p>The sweetest Hello, Sorry and evermore heartfelt Cherish you, Mother. I will see you soon on the next day of brightest<br />
+									sunrays and sweetest dew drops.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="posts/cherish.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
