--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Back to Home</a></li>
-							<li><a href="generic.html">Blog Pages</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="posts.html">Blog Pages</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
