--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html [
+<!ENTITY nbsp "&#160;">
+<!ENTITY copy "&#169;">
+<!ENTITY bull "&#8226;"> ]>
 <!--
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
@@ -152,7 +155,7 @@
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
-									
+
 									<a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
