--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html [
-<!ENTITY nbsp "&#160;">
-<!ENTITY copy "&#169;">
-<!ENTITY bull "&#8226;"> ]>
+<!DOCTYPE html>
 <!--
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
@@ -216,7 +213,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li> Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
